--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EPIC TECH AI | DJ SMOKE STREAM OVERRIDE</title>
+    <title>EPIC TECH AI | NEURAL OVERRIDE</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
@@ -45,7 +45,7 @@
                     <p class="text-[9px] tracking-[0.4em] text-gray-400 uppercase">DJ SMOKE STREAM PROTOCOL</p>
                 </div>
                 <div class="status-indicators text-right font-mono text-[9px] text-cyan-400/50 hidden md:block">
-                    <div>EST. JULY 23, 1967</div>
+                    <div>COMMUNITY_ID: 1763463136298807762</div>
                     <div>FUEL: CANNABIS_&_CAFFEINE_ACTIVE</div>
                 </div>
             </header>
@@ -60,10 +60,12 @@
                         → Atmosphere of your thoughts
                     </a>
                     <a href="https://x.com/Sm0ken420" target="_blank" class="block text-[9px] text-gray-400 hover:text-white transition-colors uppercase tracking-widest">
-                        → X.com/Sm0ken420
+                        → X.COM/SM0KEN420
                     </a>
                     <div class="community-tag mt-4">
-                        <span class="text-[8px] bg-[#00f2ff]/10 text-[#00f2ff] px-2 py-1 rounded">COMMUNITY: EPIC TECH 367 AI</span>
+                        <a href="https://x.com/i/communities/1763463136298807762" target="_blank" class="block text-[8px] bg-[#00f2ff]/10 text-[#00f2ff] px-2 py-2 rounded border border-[#00f2ff]/20 hover:bg-[#00f2ff] hover:text-black transition-all text-center font-bold">
+                            JOIN THE COMMUNITY: EPIC TECH AI
+                        </a>
                     </div>
                 </div>
             </div>
