--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body class="bg-black text-white overflow-hidden font-['Orbitron']">
 
     <div id="portal" class="fixed inset-0 z-[100] flex flex-col items-center justify-center bg-black transition-opacity duration-1000">
-        <div class="relative mb-8 text-center">
+        <div class="relative mb-8 text-center pointer-events-none">
             <h1 class="text-5xl md:text-7xl font-black tracking-tighter italic uppercase">
                 EPIC TECH <span class="text-[#00f2ff]">AI</span>
             </h1>
             <p class="text-[10px] tracking-[0.5em] text-gray-500 mt-2 uppercase">Multimedia Architect // @Sm0ken420</p>
         </div>
 
-        <div id="drop-zone" class="w-80 h-44 border border-white/10 hover:border-[#00f2ff]/50 transition-all flex flex-col items-center justify-center cursor-pointer bg-white/5 rounded-lg mb-8 p-4">
-            <p class="text-[10px] uppercase tracking-widest text-gray-400">Initialize Neural Stream</p>
+        <div id="drop-zone" class="relative z-[110] w-80 h-44 border border-white/10 hover:border-[#00f2ff]/50 transition-all flex flex-col items-center justify-center cursor-pointer bg-white/5 rounded-lg mb-8 p-4">
+            <p class="text-[10px] uppercase tracking-widest text-gray-400 pointer-events-none">Click to Initialize Stream</p>
             <input type="file" id="audio-upload" accept="audio/*" class="hidden">
         </div>
 
-        <button id="enter-btn" class="hidden px-10 py-4 border border-[#00f2ff] bg-[#00f2ff] text-black transition-all duration-500 uppercase tracking-widest text-xs font-bold shadow-[0_0_30px_rgba(0,242,255,0.3)]">
+        <button id="enter-btn" class="hidden relative z-[110] px-10 py-4 border border-[#00f2ff] bg-[#00f2ff] text-black transition-all duration-500 uppercase tracking-widest text-xs font-bold shadow-[0_0_30px_rgba(0,242,255,0.3)]">
             Begin Journey
         </button>
     </div>
@@ -36,21 +36,21 @@
             <header class="flex justify-between items-start pointer-events-auto">
                 <div class="branding">
                     <h2 class="text-xl font-black tracking-tighter italic text-[#00f2ff]">EPIC TECH AI</h2>
-                    <p class="text-[8px] tracking-[0.4em] text-gray-400 uppercase">Neural Flow Protocol</p>
+                    <p class="text-[8px] tracking-[0.4em] text-white/30 uppercase">Neural Flow Protocol</p>
                 </div>
                 <div class="telemetry text-right font-mono text-[9px] text-cyan-400/40">
-                    <div>ALTITUDE: FLOW_STATE</div>
+                    <div>SIGNAL: ENCRYPTED</div>
                     <div id="freq-telemetry">HZ: 0.00</div>
                 </div>
             </header>
 
-            <div class="absolute left-6 md:left-12 top-1/3 max-w-[220px] pointer-events-auto bg-black/40 backdrop-blur-xl p-5 border-l-2 border-[#00f2ff] shadow-2xl">
+            <div class="absolute left-6 md:left-12 top-1/4 max-w-[220px] pointer-events-auto bg-black/40 backdrop-blur-xl p-5 border-l-2 border-[#00f2ff] shadow-2xl">
                 <h3 class="text-[10px] font-bold tracking-widest text-[#00f2ff] mb-2 uppercase">Dossier: @Sm0ken420</h3>
                 <p class="text-[9px] leading-relaxed text-gray-400 italic mb-4">
-                    "Multimedia artist fueled by cannabis & caffeine. Join the chaos."
+                    "Multimedia artist fueled by cannabis & caffeine."
                 </p>
                 <div class="links space-y-3">
-                    <a href="https://intercom-bay.vercel.app" target="_blank" class="block text-[8px] text-white hover:text-[#00f2ff] transition-colors uppercase tracking-widest">
+                    <a href="https://intercom-bay.vercel.app" target="_blank" class="block text-[8px] text-white/60 hover:text-[#00f2ff] transition-colors uppercase tracking-widest">
                         → Atmospheric Thoughts
                     </a>
                     <a href="https://x.com/i/communities/1763463136298807762" target="_blank" class="block text-[8px] bg-[#00f2ff]/20 text-[#00f2ff] px-2 py-1.5 rounded border border-[#00f2ff]/30 hover:bg-[#00f2ff] hover:text-black transition-all text-center font-bold uppercase">
@@ -64,7 +64,6 @@
                     System: Operational // Frequency: 432Hz
                 </div>
                 <div class="audio-controls flex items-center gap-6">
-                    <button id="chaos-btn" class="text-[9px] tracking-widest text-magenta-500 hover:text-white transition-colors uppercase font-bold">Chaos</button>
                     <button id="audio-toggle" class="text-[9px] tracking-widest text-[#00f2ff] hover:text-white transition-colors uppercase font-bold">Pause Signal</button>
                 </div>
             </footer>
