--- a/index.html
+++ b/index.html
@@ -10,28 +10,31 @@
 </head>
 <body class="bg-black text-white overflow-hidden font-['Orbitron']">
 
-    <div id="portal" class="fixed inset-0 z-[999] flex flex-col items-center justify-center bg-black">
-        <div class="text-center mb-10 pointer-events-none">
-            <h1 class="text-5xl md:text-7xl font-black tracking-tighter italic uppercase">
+    <div id="portal" class="fixed inset-0 z-[9999] flex flex-col items-center justify-center bg-black">
+        <div class="text-center mb-10">
+            <h1 class="text-5xl md:text-7xl font-black tracking-tighter italic uppercase pointer-events-none">
                 EPIC TECH <span class="text-[#00f2ff]">AI</span>
             </h1>
-            <p class="text-[10px] tracking-[0.5em] text-gray-500 mt-2 uppercase">Multimedia Architect // @Sm0ken420</p>
+            <p class="text-[10px] tracking-[0.5em] text-gray-500 mt-2 uppercase pointer-events-none">Multimedia Architect // @Sm0ken420</p>
         </div>
 
-        <div id="drop-zone" class="w-80 h-44 border-2 border-white/10 hover:border-[#00f2ff] bg-white/5 rounded-lg flex flex-col items-center justify-center cursor-pointer transition-all relative z-[1000]">
-            <p id="upload-status" class="text-[10px] uppercase tracking-widest text-gray-400 pointer-events-none">Initialize Neural Stream</p>
-            <input type="file" id="audio-upload" accept="audio/*" class="absolute inset-0 opacity-0 cursor-pointer z-[1001]">
+        <div class="relative group">
+            <input type="file" id="audio-upload" accept="audio/*" 
+                class="absolute inset-0 w-full h-full opacity-0 cursor-pointer z-50">
+            <div id="drop-zone-visual" class="w-80 h-44 border-2 border-white/10 group-hover:border-[#00f2ff] bg-white/5 rounded-lg flex flex-col items-center justify-center transition-all">
+                <p id="upload-status" class="text-[10px] uppercase tracking-widest text-gray-400">Initialize Neural Stream</p>
+            </div>
         </div>
 
-        <button id="enter-btn" class="hidden mt-8 px-12 py-4 border border-[#00f2ff] bg-[#00f2ff] text-black font-bold uppercase tracking-widest text-xs shadow-[0_0_30px_rgba(0,242,255,0.4)] relative z-[1002]">
+        <button id="enter-btn" class="hidden mt-8 px-12 py-4 border border-[#00f2ff] bg-[#00f2ff] text-black font-bold uppercase tracking-widest text-xs z-[10000]">
             Begin Journey
         </button>
     </div>
 
-    <main id="app" class="relative w-screen h-screen opacity-0 transition-opacity duration-[2000ms] z-10">
-        <canvas id="tunnel-canvas" class="absolute inset-0 z-0"></canvas>
-
-        <div class="relative z-20 w-full h-full flex flex-col justify-between p-8 pointer-events-none">
+    <main id="app" class="relative w-screen h-screen opacity-0 transition-opacity duration-[2000ms]">
+        <canvas id="tunnel-canvas" class="absolute inset-0"></canvas>
+        
+        <div class="relative z-50 w-full h-full flex flex-col justify-between p-8 pointer-events-none">
             <header class="flex justify-between items-start pointer-events-auto">
                 <div>
                     <h2 class="text-xl font-black italic text-[#00f2ff]">EPIC TECH AI</h2>
@@ -41,7 +44,7 @@
             </header>
 
             <div class="absolute left-8 top-1/3 max-w-[200px] pointer-events-auto bg-black/60 backdrop-blur-md p-6 border-l-2 border-[#00f2ff]">
-                <h3 class="text-[10px] font-bold text-[#00f2ff] mb-2 uppercase tracking-tighter">Dossier: @Sm0ken420</h3>
+                <h3 class="text-[10px] font-bold text-[#00f2ff] mb-2 uppercase">Dossier: @Sm0ken420</h3>
                 <div class="space-y-4">
                     <a href="https://intercom-bay.vercel.app" target="_blank" class="block text-[8px] text-white/60 hover:text-white uppercase tracking-widest">→ Thoughts</a>
                     <a href="https://x.com/i/communities/1763463136298807762" target="_blank" class="block text-[9px] bg-[#00f2ff] text-black px-3 py-2 text-center font-bold uppercase">Join Collective</a>
@@ -50,7 +53,6 @@
 
             <footer class="flex justify-between items-center pointer-events-auto">
                 <button id="audio-toggle" class="text-[9px] tracking-widest text-[#00f2ff] font-bold uppercase">Pause Signal</button>
-                <div class="text-[8px] text-gray-600 uppercase">Est. 1967 // AI Optimized</div>
             </footer>
         </div>
     </main>
