--- a/index.html
+++ b/index.html
@@ -6,53 +6,52 @@
     <title>EPIC TECH AI | NEURAL FLOW</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Syncopate:wght@700&display=swap" rel="stylesheet">
 </head>
 <body class="bg-black text-white overflow-hidden font-['Orbitron']">
 
-    <div id="portal" class="fixed inset-0 z-[9999] flex flex-col items-center justify-center bg-black">
-        <div class="text-center mb-10">
-            <h1 class="text-5xl md:text-7xl font-black tracking-tighter italic uppercase pointer-events-none">
+    <div id="portal" class="fixed inset-0 z-[100] flex flex-col items-center justify-center bg-black transition-opacity duration-1000">
+        <div class="text-center mb-8">
+            <h1 class="text-5xl md:text-7xl font-black tracking-tighter italic uppercase">
                 EPIC TECH <span class="text-[#00f2ff]">AI</span>
             </h1>
-            <p class="text-[10px] tracking-[0.5em] text-gray-500 mt-2 uppercase pointer-events-none">Multimedia Architect // @Sm0ken420</p>
+            <p class="text-[10px] tracking-[0.5em] text-gray-500 mt-2 uppercase">Multimedia Architect // @Sm0ken420</p>
         </div>
 
-        <div class="relative group">
-            <input type="file" id="audio-upload" accept="audio/*" 
-                class="absolute inset-0 w-full h-full opacity-0 cursor-pointer z-50">
-            <div id="drop-zone-visual" class="w-80 h-44 border-2 border-white/10 group-hover:border-[#00f2ff] bg-white/5 rounded-lg flex flex-col items-center justify-center transition-all">
-                <p id="upload-status" class="text-[10px] uppercase tracking-widest text-gray-400">Initialize Neural Stream</p>
-            </div>
+        <div id="drop-zone" class="w-80 h-44 border border-white/10 hover:border-[#00f2ff]/50 transition-all flex flex-col items-center justify-center cursor-pointer bg-white/5 rounded-lg mb-8 p-4 relative">
+            <p id="status-text" class="text-[10px] uppercase tracking-widest text-gray-400">Initialize Neural Stream</p>
+            <input type="file" id="audio-upload" accept="audio/*" class="absolute inset-0 opacity-0 cursor-pointer">
         </div>
 
-        <button id="enter-btn" class="hidden mt-8 px-12 py-4 border border-[#00f2ff] bg-[#00f2ff] text-black font-bold uppercase tracking-widest text-xs z-[10000]">
+        <button id="enter-btn" class="hidden px-10 py-4 border border-[#00f2ff] bg-[#00f2ff] text-black transition-all duration-500 uppercase tracking-widest text-xs font-bold shadow-[0_0_30px_rgba(0,242,255,0.3)]">
             Begin Journey
         </button>
     </div>
 
     <main id="app" class="relative w-screen h-screen opacity-0 transition-opacity duration-[2000ms]">
-        <canvas id="tunnel-canvas" class="absolute inset-0"></canvas>
-        
-        <div class="relative z-50 w-full h-full flex flex-col justify-between p-8 pointer-events-none">
+        <canvas id="tunnel-canvas" class="absolute inset-0 z-0"></canvas>
+
+        <div class="relative z-10 w-full h-full flex flex-col justify-between p-6 md:p-12 pointer-events-none">
+            
             <header class="flex justify-between items-start pointer-events-auto">
                 <div>
-                    <h2 class="text-xl font-black italic text-[#00f2ff]">EPIC TECH AI</h2>
-                    <p class="text-[8px] tracking-[0.4em] text-white/30 uppercase">Neural Flow Protocol</p>
+                    <h2 class="text-xl font-black tracking-tighter italic text-[#00f2ff]">EPIC TECH AI</h2>
+                    <p class="text-[8px] tracking-[0.4em] text-gray-500 uppercase">Neural Flow Protocol</p>
                 </div>
                 <div id="freq-telemetry" class="font-mono text-[9px] text-cyan-400/40">HZ: 0.00</div>
             </header>
 
-            <div class="absolute left-8 top-1/3 max-w-[200px] pointer-events-auto bg-black/60 backdrop-blur-md p-6 border-l-2 border-[#00f2ff]">
-                <h3 class="text-[10px] font-bold text-[#00f2ff] mb-2 uppercase">Dossier: @Sm0ken420</h3>
-                <div class="space-y-4">
-                    <a href="https://intercom-bay.vercel.app" target="_blank" class="block text-[8px] text-white/60 hover:text-white uppercase tracking-widest">→ Thoughts</a>
-                    <a href="https://x.com/i/communities/1763463136298807762" target="_blank" class="block text-[9px] bg-[#00f2ff] text-black px-3 py-2 text-center font-bold uppercase">Join Collective</a>
+            <div class="absolute left-6 md:left-12 top-1/3 max-w-[220px] pointer-events-auto bg-black/40 backdrop-blur-xl p-5 border-l-2 border-[#00f2ff]">
+                <h3 class="text-[10px] font-bold tracking-widest text-[#00f2ff] mb-2 uppercase text-shadow">Dossier: @Sm0ken420</h3>
+                <div class="links space-y-3 mt-4">
+                    <a href="https://intercom-bay.vercel.app" target="_blank" class="block text-[8px] text-white/70 hover:text-[#00f2ff] transition-colors uppercase tracking-widest">→ Thoughts</a>
+                    <a href="https://x.com/i/communities/1763463136298807762" target="_blank" class="block text-[8px] bg-[#00f2ff]/20 text-[#00f2ff] px-2 py-1.5 rounded border border-[#00f2ff]/30 hover:bg-[#00f2ff] hover:text-black transition-all text-center font-bold uppercase">Join Collective</a>
                 </div>
             </div>
 
-            <footer class="flex justify-between items-center pointer-events-auto">
-                <button id="audio-toggle" class="text-[9px] tracking-widest text-[#00f2ff] font-bold uppercase">Pause Signal</button>
+            <footer class="flex justify-between items-end pointer-events-auto">
+                <div class="status text-[8px] text-gray-600 uppercase tracking-widest">System: Operational</div>
+                <button id="audio-toggle" class="text-[9px] tracking-widest text-[#00f2ff] hover:text-white transition-colors uppercase font-bold">Pause Signal</button>
             </footer>
         </div>
     </main>
